<resources>
    <string name="app_name">ShareSound Android RPC Module</string>
    <string name="remote_server_address">Server Address</string>
    <string name="remote_server_port">Server Port</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="password_retype">Retype Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="connect">Connect</string>
    <string name="account_service">Account Service</string>
    <string name="launch_account_service">Launch Account Service</string>
    <string name="get_profile">Get Profile</string>
</resources>
